# semitorch

./: .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  fashionmnist.ipynb  pyproject.toml  setup.cfg  setup.py
.ipynb_checkpoints/: convnext_fashion-checkpoint.ipynb
data/naitzat/: README.md  rings_9.pt
data/naitzat/circles_type_8/: circles_type_8.pt  inference_circles_type_8.pt
data/naitzat/spheres_9/: spheres_9.pt
docs/: conf.py  index.rst
experiments/: article-convnext-fashion-baseline.ipynb  article-convnext-fashion-trop.ipynb  article-fullyconnected-circles.ipynb  article-fullyconnected-fashion.ipynb  article-fullyconnected-heart.ipynb  article-fullyconnected-iris.ipynb  article-fullyconnected-naitzat.ipynb  article-fullyconnected-spheres.ipynb  article-fullyconnected.ipynb  convnext_fashion.ipynb  fashion.py  fashion_models.py  fullyconnected.ipynb  fullyconnected_fashion.ipynb  fullyconnected_fashion_simplified.ipynb  fullyconnected_fashion_simplified_reversed.ipynb  fullyconnected_fashion_standardized.ipynb  fullyconnected_fashion_standardized_no_weight_decay.ipynb
experiments/Archive/: gradcheckpoint.ipynb
experiments/Master thesis/: fullyconnected.ipynb  fullyconnected_01.ipynb  fullyconnected_fashion.ipynb  fullyconnected_fashion_simplified.ipynb  fullyconnected_fashion_simplified_reversed.ipynb
experiments/Master thesis/Archive/: fullyconnected_fashion.ipynb  fullyconnected_fashion_standardised_setup_with_weight_decay.ipynb
src/: MaxPlus.py  dev.ipynb  maxplus.ipynb
src/semitorch/: SemiSGD.py  __init__.py  clampAdamW.py  clampSGD.py  convdims.py  convnext.py  logconv.py  logplus.py  logplus_master_project.py  lukasiewicz.py  maxplus.py  maxplus_master_project.py  minplus.py  minplus_master_project.py  optim.py  semilog.py  semilog_shifted.py  semilog_shifted_scaled.py  skeleton.py  tropicalSGD.py  utils.py  viterbi.py
src/semitorch/csrc/: dbg.h  extension.cpp  macros.h  maxplus.cpp  maxplus.h  maxplus_cuda.cu  maxplus_cuda.cuh
src/semitorch/models/: convnext.py  general.py
src/semitorch/tests/: __init__.py  test_dataTransformerFunctions.py  test_extension.py  test_general.py  (+9 more)
tests/: conftest.py  test_skeleton.py
(+3 files in other folders)
